syntax = "proto3";

package example;

service ChatService{
    rpc Chat(stream ChatMessage) returns (stream ChatMessage) {}
}

message ChatMessage{
    string message = 1;
}