// 요청을 yield로 여러번 보내는데 grpc 라이브러리가 요청을 모두 처리하고 응답을 1번 보내준다.
// http 리퀘스트에서는 이런 작업을 하기 위해서는 어려움이 있지만, grpc 스트리밍 통신에서는 쉽게 됨

syntax = "proto3";

package streaming;

// 요청 메시지 정의
message RequestMessage {
    string data = 1;
}

// 응답 메시지 정의
message ResponseMessage {
    string result = 1;
}

service StreamingService{
    rpc StreamData (stream RequestMessage) returns (ResponseMessage);
}

